--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+        android:supportsRtl="true">
+<!--        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">-->
 <!--        android:theme="@style/Theme.Devintensive2019">-->
 
         <activity android:name=".MainActivity">
